# pfsense-config-tool

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_auth.py
.claude/: settings.local.json
pfSense REST API Documentation_files/: swagger-initializer.js.download
pfsense_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pfsense_cli/api/: client.py  endpoints.py
pfsense_cli/cli/: client.py  decorators.py  main.py  network.py  utils.py  vpn.py
pfsense_cli/config/: manager.py
pfsense_cli/models/: client.py  network.py  vpn.py
